<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>RestAhead</artifactId>
        <groupId>io.github.zskamljic</groupId>
        <version>0.3.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>test-report-aggregator</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>demo</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>rest-ahead-client</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>rest-ahead-jackson-converter</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>rest-ahead-processor</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>rest-ahead-spring</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.zskamljic</groupId>
            <artifactId>rest-ahead-spring-dialect</artifactId>
            <version>0.3.0</version>
        </dependency>

        <!-- Testing dependencies -->
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <version>${truth.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.testing.compile</groupId>
            <artifactId>compile-testing</artifactId>
            <version>${testing.compile.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>report-aggregate</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>testing only</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <argLine>--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argLine>
            </properties>
        </profile>
    </profiles>
</project>